--- a/templates/catalog/catalog.html
+++ b/templates/catalog/catalog.html
@@ -6,51 +6,53 @@
   <main>
     <div class="page-header">
       <div class="container">
-        <h1>Каталог книг</h1>
+        <h1>Catalog Books</h1>
       </div>
     </div>
 
     <div class="container">
       <div class="catalog-layout">
         <aside class="filters">
-          <h3>Фільтри</h3>
-          <div class="filter-group">
-            <label for="search">Пошук за назвою</label>
-            <input type="text" id="search" placeholder="Введіть назву...">
-          </div>
-          <div class="filter-group">
-            <label for="genre">Жанр</label>
-            <select id="genre">
-              <option value="">Всі жанри</option>
-              <option value="fantasy">Фантастика</option>
-              <option value="detective">Детектив</option>
-              <option value="classic">Класика</option>
-              <option value="science">Наукова література</option>
-            </select>
-          </div>
-          <div class="filter-group">
-            <label for="author">Автор</label>
-            <select id="author">
-              <option value="">Всі автори</option>
-              <option value="orwell">Джордж Орвелл</option>
-              <option value="herbert">Френк Герберт</option>
-              <option value="tolkien">Дж. Р. Р. Толкін</option>
-            </select>
-          </div>
-          <button class="btn">Застосувати</button>
+          <h3>Filters</h3>
+          <form method="get" action="#">
+            <div class="filter-group">
+              {{ form_filter }}
+            </div>
+            <button class="btn">Apply</button>
+          </form>
         </aside>
 
         <div class="catalog-books">
+          {% if user.is_authenticated and user.is_superuser %}
+            <br>
+            <a
+                href="#"
+                class="btn-secondary"
+                style="background-color: #FFEE8C">Create Book
+            </a>
+            <br>
+            <br>
+          {% endif %}
           <div class="books-grid">
             {% for book in books %}
               <div class="book-card">
                 <img src="{{ book.cover_image_url.url }}" alt="Обкладинка книги">
                 <h3>{{ book.title }}</h3>
                 <p>{{ book.author.all|join:", " }}</p>
-                <a href="{% url 'library:book_page' book.pk %}" class="btn-secondary">Детальніше</a>
+                <a href="{% url 'library:book_page_view' book.pk %}" class="btn-secondary">Details</a>
                 {% if user.is_authenticated and user.is_superuser %}
-                  <a href="{% url 'library:book_page' book.pk %}" class="btn-secondary">Редагувати</a>
-                  <a href="{% url 'library:book_page' book.pk %}" class="btn-secondary">Видалити</a>
+                  <br>
+                  <a
+                      href="{% url 'library:book_page_view' book.pk %}"
+                      class="btn-secondary"
+                      style="background-color: #FFDBBB">Editing
+                  </a>
+                  <br>
+                  <a
+                      href="{% url 'library:book_page_view' book.pk %}"
+                      class="btn-secondary"
+                      style="background-color: #FFB09C">Delete
+                  </a>
                 {% endif %}
               </div>
             {% endfor %}
