--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -12,7 +12,7 @@
       <div class="container">
         <h1>Відкрийте для себе світ знань</h1>
         <p>Ваша улюблена книга вже чекає на вас.</p>
-        <a href="{% url 'library:catalog' %}" class="btn">Перейти до каталогу</a>
+        <a href="{% url 'library:catalog_page_view' %}" class="btn">Перейти до каталогу</a>
       </div>
     </section>
 
