--- a/templates/catalog/catalog.html
+++ b/templates/catalog/catalog.html
@@ -26,7 +26,7 @@
           {% if user.is_authenticated and user.is_superuser %}
             <br>
             <a
-                href="#"
+                href="{% url 'library:book_create_view' %}"
                 class="btn-secondary"
                 style="background-color: #FFEE8C">Create Book
             </a>
@@ -36,14 +36,18 @@
           <div class="books-grid">
             {% for book in books %}
               <div class="book-card">
-                <img src="{{ book.cover_image_url.url }}" alt="Обкладинка книги">
+                {% if product.cover_image_url %}
+                  <img src="{{ product.cover_image_url.url }}" alt="{{ product.name }}">
+                {% else %}
+                  <img src="{% static 'assets/pics/373233_24241285.jpg' %}" alt="No image">
+                {% endif %}
                 <h3>{{ book.title }}</h3>
                 <p>{{ book.author.all|join:", " }}</p>
                 <a href="{% url 'library:book_page_view' book.pk %}" class="btn-secondary">Details</a>
                 {% if user.is_authenticated and user.is_superuser %}
                   <br>
                   <a
-                      href="{% url 'library:book_page_view' book.pk %}"
+                      href="{% url 'library:book_update_view' book.pk %}"
                       class="btn-secondary"
                       style="background-color: #FFDBBB">Editing
                   </a>
