--- a/templates/catalog/catalog.html
+++ b/templates/catalog/catalog.html
@@ -36,8 +36,8 @@
           <div class="books-grid">
             {% for book in books %}
               <div class="book-card">
-                {% if product.cover_image_url %}
-                  <img src="{{ product.cover_image_url.url }}" alt="{{ product.name }}">
+                {% if book_pk.cover_image_url %}
+                  <img src="{{ book_pk.cover_image_url.url }}" alt="{{ book_pk.title }}">
                 {% else %}
                   <img src="{% static 'assets/pics/373233_24241285.jpg' %}" alt="No image">
                 {% endif %}
@@ -53,7 +53,7 @@
                   </a>
                   <br>
                   <a
-                      href="{% url 'library:book_page_view' book.pk %}"
+                      href="{% url 'library:book_delete_view' book.pk %}"
                       class="btn-secondary"
                       style="background-color: #FFB09C">Delete
                   </a>
