feat: add create genre, author for admin

--- a/templates/catalog/catalog.html
+++ b/templates/catalog/catalog.html
@@ -30,6 +30,16 @@
                 class="btn-secondary"
                 style="background-color: #FFEE8C">Create Book
             </a>
+            <a
+                href="{% url 'library:genre_create_view' %}"
+                class="btn-secondary"
+                style="background-color: #FFEE8C">Create Genre
+            </a>
+            <a
+                href="{% url 'library:author_create_view' %}"
+                class="btn-secondary"
+                style="background-color: #FFEE8C">Create Author
+            </a>
             <br>
             <br>
           {% endif %}
