feat: add 'add the book to cart, delete book, validation, checkout'

--- a/templates/includes/headers/header-main.html
+++ b/templates/includes/headers/header-main.html
@@ -19,7 +19,7 @@
           </div>
         {% else %}
           <div class="user-actions">
-            <a href="#">
+            <a href="{% url 'library:checkout_page_view' %}">
               Кошик 🛒
               {% if cart_items_count > 0 %}
                 <span>({{ cart_items_count }})</span>
