--- a/templates/catalog/book-page.html
+++ b/templates/catalog/book-page.html
@@ -4,6 +4,15 @@
 {% block content %}
   <main>
     <div class="container">
+      {% if messages %}
+        <ul class="messages">
+          {% for message in messages %}
+            <li class="{{ message.tags }}">
+              {{ message }}
+            </li>
+          {% endfor %}
+        </ul>
+      {% endif %}
       <div class="book-details-layout">
         <div class="book-cover">
           {% if book_pk.cover_image_url %}
@@ -50,7 +59,11 @@
             {% endif %}
           </div>
           <div class="book-actions">
-            <a href="{% url 'library:purchase_create_view' %}" class="btn">Купити книгу</a>
+            <form method="post" action="{% url 'library:add_to_cart_item' book_pk.pk %}">
+              {% csrf_token %}
+
+              <button type="submit" class="btn-secondary">Добавити книгу до корзини</button>
+            </form>
             <form action="{% url 'library:add_liked_book' book_pk.pk %}" method="post">
               {% csrf_token %}
               {% if not is_liked_book_by_user %}
